# pigment

./: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/config/: versionUpdate.cmake  versiondef.h.in
cmake/packaging/: CMakeLists.txt
include/: spectral.hpp
include/incom/pigment/: pigment.hpp
src/: main.cpp
